# trudeau

./: LICENSE  README.md  trudeau.cabal
app/: Main.hs
src/: GraphDraw.hs  Graphs.hs
test/: Exercizes.hs  Spec.hs  Theorems.hs
