name:                trudeau
version:             0.1.0.0
synopsis:            Inefficient but correct graph theory library
-- description:
homepage:            https://github.com/ambuc/trudeau#readme
license:             BSD3
license-file:        LICENSE
author:              James Adam Buckland
maintainer:          james.adam.buckland@gmail.com
copyright:           2017 James Adam Buckland
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphs
                     , GraphDraw
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , matrix
                     , vector
                     , process
  default-language:    Haskell2010

executable trudeau-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , trudeau
                     , containers
                     , matrix
                     , vector
  default-language:    Haskell2010

test-suite functions-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , trudeau
                     , containers
                     , matrix
                     , vector
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite exercizes
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Exercizes.hs
  build-depends:       base
                     , trudeau
                     , containers
                     , matrix
                     , vector
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite theorems
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Theorems.hs
  build-depends:       base
                     , trudeau
                     , containers
                     , matrix
                     , vector
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ambuc/trudeau
